[package]
name = "dwscraper"
version = "0.1.0"
edition = "2021"
description = "Digital Whisper website scraper"

[dependencies]
log = "0.4"
simplelog = "^0.12.0"
clap = { version = "4.1.6", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
select = "0.6.0"
rayon = "1.6.1"
